force-app/main/default/objects/Account/fields/Has_Only_Attachments_Or_Notes__c.field-meta.xml
<CustomField>
    <fullName>Has_Only_Attachments_Or_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Only Attachments Or Notes</label>
    <type>Checkbox</type>
</CustomField>