force-app/main/default/objects/Account/fields/Have_A_Fee_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Have_A_Fee_Expiration_Date__c</fullName>
    <label>Have A Fee Expiration Date</label>
    <type>Date</type>
</CustomField>