force-app/main/default/objects/Account/fields/HQ_Account__c.field-meta.xml
<CustomField>
    <fullName>HQ_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to denote Headquarters for Multi-jurisdictional purposes</description>
    <label>HQ Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>