force-app/main/default/objects/Account/fields/Include_Roster__c.field-meta.xml
<CustomField>
    <fullName>Include_Roster__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If Yes, Invoice Delivery Method must be Email or Portal.</inlineHelpText>
    <label>Include Roster</label>
    <type>Checkbox</type>
</CustomField>