force-app/main/default/objects/Account/fields/Inherit_Parent_Terms__c.field-meta.xml
<CustomField>
    <fullName>Inherit_Parent_Terms__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select if new Account should inherit Contract Terms, Payment Terms and Credit Limit from Parent Account.</inlineHelpText>
    <label>Inherit Parent Terms</label>
    <type>Checkbox</type>
</CustomField>