force-app/main/default/objects/Account/fields/Inv_Del_Assign_Date__c.field-meta.xml
<CustomField>
    <fullName>Inv_Del_Assign_Date__c</fullName>
    <inlineHelpText>This is the date that the Invoice Delivery Type was assigned to the account.</inlineHelpText>
    <label>Inv Del Assign Date</label>
    <type>Date</type>
</CustomField>