force-app/main/default/objects/Account/fields/Invoice_delivery_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_delivery_Email__c</fullName>
    <inlineHelpText>This is the email address where eInvoices will be directed if eInvoicing has been elected</inlineHelpText>
    <label>Invoice Delivery Email</label>
    <type>Email</type>
</CustomField>