force-app/main/default/objects/Account/fields/Invoice_Delivery_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Delivery_Frequency__c</fullName>
    <description>This field indicates the invoice delivery frequency for a customer.</description>
    <label>Invoice Delivery Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4x/Monthly</fullName>
                <default>true</default>
                <label>4x/Monthly</label>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>