force-app/main/default/objects/Account/fields/Invoice_Template__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template__c</fullName>
    <inlineHelpText>See Job Aid: Invoice Template Selections to determine your customer needs.</inlineHelpText>
    <label>Invoice Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
                <default>true</default>
                <label>Simple</label>
            </value>
            <value>
                <fullName>Detailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>