force-app/main/default/objects/Account/fields/Is_Pricing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Is_Pricing_Agreement__c</fullName>
    <description>It is a system field not visible to users. This field is referenced in Agreement Flag.</description>
    <label>Is Pricing Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>