force-app/main/default/objects/Account/fields/Log_In_Email__c.field-meta.xml
<CustomField>
    <fullName>Log_In_Email__c</fullName>
    <description>External log in email from API in creating account criteria.</description>
    <label>Red Cross Store email</label>
    <type>Email</type>
</CustomField>