force-app/main/default/objects/Account/fields/LTP_Territory_Owner__c.field-meta.xml
<CustomField>
    <fullName>LTP_Territory_Owner__c</fullName>
    <formula>LTP_Territory__r.Owner:User.FirstName&amp;&quot; &quot;&amp;LTP_Territory__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTP Territory Owner</label>
    <type>Text</type>
</CustomField>