force-app/main/default/objects/Account/fields/NAICS_Index_Name__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Index_Name__c</fullName>
    <formula>NAICS_Code__r.Index_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAICS Index Name</label>
    <type>Text</type>
</CustomField>