force-app/main/default/objects/Account/fields/Name_Series__c.field-meta.xml
<CustomField>
    <fullName>Name_Series__c</fullName>
    <label>Name Series</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>