force-app/main/default/objects/Account/fields/New_TSC_Contact__c.field-meta.xml
<CustomField>
    <fullName>New_TSC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New TSC Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (New TSC Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>