force-app/main/default/objects/Account/fields/nk_billto_org_id__c.field-meta.xml
<CustomField>
    <fullName>nk_billto_org_id__c</fullName>
    <description>Created for Data migration-to be used by Finance on a regular basis.</description>
    <label>nk billto org id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>