force-app/main/default/objects/Account/fields/No_Fee_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Fee_Expiration_Date__c</fullName>
    <label>No Fee Expiration Date</label>
    <type>Date</type>
</CustomField>