force-app/main/default/objects/Account/fields/Number_of_Related_Cases__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Cases__c</fullName>
    <description>This field is only used in ETL processes to indicate the number of related cases to this account.</description>
    <label>Number of Related Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>