force-app/main/default/objects/Account/fields/Number_of_Related_Opportunitites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Opportunitites__c</fullName>
    <description>This field is only used in ETL processes to indicate the number of related opportunities to this account.</description>
    <label>Number of Related Opportunitites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>