force-app/main/default/objects/Account/fields/Number_of_Times_Terminated__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Times_Terminated__c</fullName>
    <label>Number of Times Terminated</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>