force-app/main/default/objects/Account/fields/Original_SABA_LMS_Code__c.field-meta.xml
<CustomField>
    <fullName>Original_SABA_LMS_Code__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>Original SABA LMS Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>