force-app/main/default/objects/Account/fields/Preferred_Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Payment_type__c</fullName>
    <description>identify which types are the customer preferred payment</description>
    <inlineHelpText>This is how customer will pay for products and services.</inlineHelpText>
    <label>Preferred Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit/Debit Card</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>