force-app/main/default/objects/Account/fields/Pricing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Agreement__c</fullName>
    <formula>IF( ISPICKVAL(Is_Pricing_Agreement__c, &quot;Yes&quot;) , &quot;Pricing&quot;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Agreement</label>
    <type>Text</type>
</CustomField>