force-app/main/default/objects/Account/fields/Pricing_Agreement_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Agreement_in_Place__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pricing Agreement in Place</label>
    <type>Checkbox</type>
</CustomField>