force-app/main/default/objects/Account/fields/Prodid__c.field-meta.xml
<CustomField>
    <fullName>Prodid__c</fullName>
    <description>For data migration only</description>
    <externalId>true</externalId>
    <label>Prodid</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>