force-app/main/default/objects/Account/fields/REPORT_AR_0_30_Days__c.field-meta.xml
<CustomField>
    <fullName>REPORT_AR_0_30_Days__c</fullName>
    <description>Used only for Data upload to populate AR 0-30 Days</description>
    <label>REPORT AR 0-30 Days</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>