force-app/main/default/objects/Account/fields/REPORT_AR_121_150_Days__c.field-meta.xml
<CustomField>
    <fullName>REPORT_AR_121_150_Days__c</fullName>
    <description>This field is used for Data Uplaod and updates AR 121-150 Days field</description>
    <label>REPORT AR 121-150 Days</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>