force-app/main/default/objects/Account/fields/REPORT_AR_121_180_Days__c.field-meta.xml
<CustomField>
    <fullName>REPORT_AR_121_180_Days__c</fullName>
    <label>REPORT AR 121-180 Days</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>