force-app/main/default/objects/Account/fields/REPORT_AR_180_Days__c.field-meta.xml
<CustomField>
    <fullName>REPORT_AR_180_Days__c</fullName>
    <description>This field is used for data load and updates field AR &gt;180 Days</description>
    <label>REPORT AR &gt;180 Days</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>