force-app/main/default/objects/Account/fields/REPORT_AR_Last_Report__c.field-meta.xml
<CustomField>
    <fullName>REPORT_AR_Last_Report__c</fullName>
    <description>This field is used as a data load and updates AR Last Report field</description>
    <label>REPORT AR Last Report</label>
    <type>DateTime</type>
</CustomField>