force-app/main/default/objects/Account/fields/REPORT_Collections_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>REPORT_Collections_Termination_Date__c</fullName>
    <label>REPORT Collections Termination Date</label>
    <type>Date</type>
</CustomField>