force-app/main/default/objects/Account/fields/REPORT_Last_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>REPORT_Last_Payment_Date__c</fullName>
    <description>This field is used for Data load and updates LAst Payment Date</description>
    <label>REPORT Last Payment Date</label>
    <type>Date</type>
</CustomField>