force-app/main/default/objects/Account/fields/REPORT_Total_AR__c.field-meta.xml
<CustomField>
    <fullName>REPORT_Total_AR__c</fullName>
    <description>This field is used for data upload for Total AR</description>
    <label>REPORT Total AR</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>