force-app/main/default/objects/Account/fields/Restrict_Order_Confirmation_Email__c.field-meta.xml
<CustomField>
    <fullName>Restrict_Order_Confirmation_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Send Order Confirmation to the Billing Contact Only</description>
    <inlineHelpText>When this is checked, the Order Confirmation email will be sent only to the Billing Contact associated to the Order&#39;s Account.</inlineHelpText>
    <label>Restrict Order Confirmation Email Dist.</label>
    <type>Checkbox</type>
</CustomField>