force-app/main/default/objects/Account/fields/SABA_Billing_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>SABA_Billing_Contact_Email__c</fullName>
    <description>Saba-Legacy data migration</description>
    <label>SABA Billing Contact Email</label>
    <type>Email</type>
</CustomField>