force-app/main/default/objects/Account/fields/SABA_Billing_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>SABA_Billing_Contact_Name__c</fullName>
    <description>Saba legacy data migration</description>
    <label>SABA Billing Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>