force-app/main/default/objects/Account/fields/SABA_Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>SABA_Billing_Contact_Phone__c</fullName>
    <description>Saba-Legacy data migration</description>
    <label>SABA Billing Contact Phone</label>
    <type>Phone</type>
</CustomField>