force-app/main/default/objects/Account/fields/SABA_BillingCity__c.field-meta.xml
<CustomField>
    <fullName>SABA_BillingCity__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA BillingCity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>