force-app/main/default/objects/Account/fields/SABA_BillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>SABA_BillingPostalCode__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA BillingPostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>