force-app/main/default/objects/Account/fields/SABA_BillingStreet__c.field-meta.xml
<CustomField>
    <fullName>SABA_BillingStreet__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA BillingStreet</label>
    <type>TextArea</type>
</CustomField>