force-app/main/default/objects/Account/fields/SABA_Company_affiliation__c.field-meta.xml
<CustomField>
    <fullName>SABA_Company_affiliation__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA Company affiliation</label>
    <length>25</length>
    <type>Text</type>
</CustomField>