force-app/main/default/objects/Account/fields/SABA_Createddate__c.field-meta.xml
<CustomField>
    <fullName>SABA_Createddate__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA Createddate</label>
    <type>DateTime</type>
</CustomField>