force-app/main/default/objects/Account/fields/Saba_Id__c.field-meta.xml
<CustomField>
    <fullName>Saba_Id__c</fullName>
    <description>Unique identifier for a customer account in CFS. Initial data load contains unique identifier in Saba.</description>
    <externalId>true</externalId>
    <label>Saba Id</label>
    <length>60</length>
    <type>Text</type>
</CustomField>