force-app/main/default/objects/Account/fields/SABA_Lastmodifiedby__c.field-meta.xml
<CustomField>
    <fullName>SABA_Lastmodifiedby__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA Lastmodifiedby</label>
    <length>80</length>
    <type>Text</type>
</CustomField>