force-app/main/default/objects/Account/fields/SABA_Lastmodifieddate__c.field-meta.xml
<CustomField>
    <fullName>SABA_Lastmodifieddate__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA Lastmodifieddate</label>
    <type>DateTime</type>
</CustomField>