force-app/main/default/objects/Account/fields/SABA_LMS_Code__c.field-meta.xml
<CustomField>
    <fullName>SABA_LMS_Code__c</fullName>
    <label>SABA\LMS Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>