force-app/main/default/objects/Account/fields/SABA_Name__c.field-meta.xml
<CustomField>
    <fullName>SABA_Name__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>