force-app/main/default/objects/Account/fields/SABA_ORG_KEY__c.field-meta.xml
<CustomField>
    <fullName>SABA_ORG_KEY__c</fullName>
    <description>Unique id for SABA data migration.</description>
    <externalId>true</externalId>
    <label>SABA ORG KEY</label>
    <length>24</length>
    <type>Text</type>
</CustomField>