force-app/main/default/objects/Account/fields/SABA_ORG_Match_Type__c.field-meta.xml
<CustomField>
    <fullName>SABA_ORG_Match_Type__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <label>SABA ORG Match Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NetNew</fullName>
            </value>
            <value>
                <fullName>1-1</fullName>
            </value>
            <value>
                <fullName>M-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>