force-app/main/default/objects/Account/fields/SABA_Org_Type__c.field-meta.xml
<CustomField>
    <fullName>SABA_Org_Type__c</fullName>
    <description>Legacy SABA fields- Data Migration from SABA</description>
    <inlineHelpText>Indicates the type of customer relationship this organization has with Training Services.  Required for Field Sales and BGST customer accounts.</inlineHelpText>
    <label>Org Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>AP/BC</fullName>
            </value>
            <value>
                <fullName>AP/BC/FS</fullName>
            </value>
            <value>
                <fullName>AP/FS</fullName>
            </value>
            <value>
                <fullName>AP NAN</fullName>
            </value>
            <value>
                <fullName>AQ</fullName>
            </value>
            <value>
                <fullName>AQ NAN</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>BC/FS</fullName>
            </value>
            <value>
                <fullName>Blood Region</fullName>
            </value>
            <value>
                <fullName>CEPA</fullName>
            </value>
            <value>
                <fullName>CEPFS</fullName>
            </value>
            <value>
                <fullName>COM</fullName>
            </value>
            <value>
                <fullName>Community Branch</fullName>
            </value>
            <value>
                <fullName>Community Chapter</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>FS/APNAN</fullName>
            </value>
            <value>
                <fullName>FS NAN</fullName>
            </value>
            <value>
                <fullName>House AP</fullName>
            </value>
            <value>
                <fullName>House AQ</fullName>
            </value>
            <value>
                <fullName>House FS</fullName>
            </value>
            <value>
                <fullName>House LTP</fullName>
            </value>
            <value>
                <fullName>LTP</fullName>
            </value>
            <value>
                <fullName>NATA</fullName>
            </value>
            <value>
                <fullName>NATAP/LTP</fullName>
            </value>
            <value>
                <fullName>NATFS</fullName>
            </value>
            <value>
                <fullName>NATI</fullName>
            </value>
            <value>
                <fullName>NHQ</fullName>
            </value>
            <value>
                <fullName>Red Cross - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>