force-app/main/default/objects/Account/fields/Salesforce_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Auto_Number__c</fullName>
    <displayFormat>SF{00000000}</displayFormat>
    <label>Salesforce Auto Number</label>
    <type>AutoNumber</type>
</CustomField>