force-app/main/default/objects/Account/fields/Scheduling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Notes__c</fullName>
    <label>Scheduling Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>