force-app/main/default/objects/Account/fields/Separate_Invoice_For_Products__c.field-meta.xml
<CustomField>
    <fullName>Separate_Invoice_For_Products__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Product purchases and training services transactions together or separate.</inlineHelpText>
    <label>Separate Invoice For Products</label>
    <type>Checkbox</type>
</CustomField>