force-app/main/default/objects/Account/fields/SF_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_Number__c</fullName>
    <formula>if(OR( 
INCLUDES(PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(PHSS_Channel__c, &quot;RCS Distributor&quot;)), 
if(ISBLANK(SF_Account_Number_Text__c), if(ISBLANK(Salesforce_Auto_Number__c),CFS_Account_Number__c,Salesforce_Auto_Number__c), SF_Account_Number_Text__c) ,null)</formula>
    <label>SF Account Number</label>
    <type>Text</type>
</CustomField>