force-app/main/default/objects/Account/fields/SF_Account_Number_Text__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_Number_Text__c</fullName>
    <label>SF Account Number Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>