force-app/main/default/objects/Account/fields/Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address__c</fullName>
    <description>Store Shipping Address for Training Event</description>
    <formula>ShippingStreet + &quot; &quot;+ ShippingCity + &quot; &quot;+ ShippingState + &quot; &quot;+ ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>