force-app/main/default/objects/Account/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Source System field used for Data Migration.</description>
    <label>Source System</label>
    <length>150</length>
    <type>Text</type>
</CustomField>