force-app/main/default/objects/Account/fields/Special_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Special_Invoicing__c</fullName>
    <description>This field holds information to determine processing transactions for special invoicing. Required for determining customer class.</description>
    <label>Special Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHAREPOINT INVOICING</fullName>
            </value>
            <value>
                <fullName>DO NOT MAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>