force-app/main/default/objects/Account/fields/Spots_Taken__c.field-meta.xml
<CustomField>
    <fullName>Spots_Taken__c</fullName>
    <description>This field should only be populated for bucket accounts. This field represents how many contacts are under the bucket account.</description>
    <label>Spots Taken in Bucket</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>